# school

CSCI4171/: Assignment5.docx  ~$signment1_Essay.docx  ~WRL2724.tmp
CSCI4171/A1/: Assignment1_Essay.docx  Assignment1_EvanCruz.docx  Assignment1_Trace.docx  Assignment1_data (Autosaved).xlsx  Assignment1_data.xlsx
CSCI4171/A2/: Assignment2.docx  a2text.txt  reader.py
CSCI4171/A3/: a3Results.txt  a3q1.py  a3q1packets.txt  a3q2.py  a3q2dest.txt  a3q2route.txt
CSCI4171/A4/: crcMethods.py  crcprotocol.py
CSCI4172/: group.docx  ~$group.docx  ~$tSecA4-q1.docx  ~WRL1636.tmp
CSCI4172/A1/: NetSecA1-q1.docx  NetSecA1-q2.docx  NetSecA1-q3.docx  NetSecA1-q4.docx
CSCI4172/A2/: NetSecA2-q1q2.docx  NetSecA2Essay.docx  a2q3-NetSec.py  acllist.txt  packets.txt
CSCI4172/A3/: NetSecA3-q2.docx  NetSecA3-q3.docx  a3-pythonoutput.py  a3q1-Ceaser.py  a3q1-Matrix.py  a3q1-TransMatrix.py  a3q1-Vig.py  a3q4-RSA.py  output.py
CSCI4172/A4/: A4q2Output.py  NetSecA4-q1.docx  NetSecA4-q3.docx  NetSecA4-q4.docx  a4q2.py
EvanCruz_FinalAssignment/infx1606_starter/: altadoc.html  index.html
EvanCruz_assignment5/assignment5/: index.html
Evan_Cruz_assignment1/infx1606_starter/: index.html
INFIX 2601/Assignment1/: handler.php  index.php  (+1 more)
Operating Systems/osproject-master/osproject-master/: CMakeLists.txt  Makefile  README.md  globals.h  http.c  http.h  mlfb.c  mlfb.h  node.c  node.h  queue.c  queue.h  rcb.c  rcb.h  rr.c  rr.h  sjf.c  sjf.h  sws.c  sws.h  test
VideoGame-Scripts/: EnemyAI.cs  MouseHover.cs  MovingPlatform.cs  PlayerCharacter.cs  PlayerController.cs  followCamera.cs
(+155 files in other folders)
